# iden

./: .gitignore  DESIGN_BRIEF.md  README.md
engine/: README.md
kiosk/: README.md
node/: README.md
provider/: README.md  main.py  pyproject.toml
provider/admin/: __init__.py
provider/admin/clients/: errors.py  routes.py  schemas.py  service.py
provider/authz/: __init__.py
provider/biometric/: __init__.py
provider/core/: auth.py  config.py  db.py  log.py  security.py
provider/core/middleware/: __init__.py  cors.py
provider/entity/: __init__.py
provider/scripts/: seed.py
provider/shared/: models.py  oidc.py  roles.py  scopes.py
verification/: .env.example  API.md  docker-compose.yml
verification/server/: .dockerignore  .env.example  Dockerfile  README.md  capture.py  cli.py  config.py  db.py  face.py  main.py  middleware.py  models.py  plan.md  pyproject.toml  responses.py  schemas.py  storage.py  verify.py
verification/server/local_store/052376fc-23e2-48a5-955c-6b6af2827a5b/: record.json
verification/server/local_store/0bf15fca-019c-4a49-9ec1-2a1508b59ccd/: record.json
verification/server/local_store/115b8101-f84f-485a-a329-8e6d73687453/: record.json
verification/server/local_store/15703f89-3ec4-413e-9fe5-d0738b064f09/: record.json
verification/server/local_store/2b2b4e03-49f5-44ac-b777-16e2b81b7b17/: record.json
verification/server/local_store/342c0b55-457d-4e2d-bee5-fc4037b6287a/: record.json
verification/server/local_store/38281e45-e514-4ad9-9be9-5c1a2fd440ff/: record.json
verification/server/local_store/3a37e7c3-6a18-44d4-8e43-5bb7e378b8a4/: record.json
verification/server/local_store/518fdfd5-4a51-4c00-a8d3-c243f3d78680/: record.json
verification/server/local_store/6f0fac08-25c0-4090-98bd-cdb993a145ae/: record.json
verification/server/local_store/7739b136-120a-4222-946d-c30ac7e3b80e/: record.json
verification/server/local_store/7d9ac2aa-fe4c-4910-baea-213f9ab4fabc/: record.json
verification/server/local_store/abc0fa7d-308a-4eb1-aa4e-7d701ce065ff/: record.json
verification/server/local_store/ad716af8-ef5f-4e07-aa46-eb4304d73456/: record.json
verification/server/local_store/aebf4395-3b6e-4852-8839-cea2c72cfea9/: record.json
verification/server/local_store/d5343790-f738-4a4e-b130-37d972c7908c/: record.json
verification/server/local_store/d6316e69-6862-4eb7-bc16-1d0524aeb1b3/: record.json
(+115 files in other folders)
